# robot_arm

./: CMakeLists.txt  init_pkg.sh  package.xml
scripts/: follow_joint_trajectory_action_client.py  minimal_node.py  move_arm.py
